[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/gui/Theme.tres" type="Theme" id=1]
[ext_resource path="res://src/menu/LoadoutOptions.gd" type="Script" id=2]

[node name="LoadoutOptions" type="VBoxContainer"]
margin_right = 280.0
margin_bottom = 196.0
theme = ExtResource( 1 )
alignment = 1
script = ExtResource( 2 )

[node name="BowLabel" type="Label" parent="."]
margin_right = 280.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 20 )
text = "Bow and Arrows"
align = 1
valign = 1

[node name="BowUnlocks" type="GridContainer" parent="."]
margin_top = 28.0
margin_right = 280.0
margin_bottom = 376.0
custom_constants/vseparation = 12
custom_constants/hseparation = 12
columns = 2

[node name="Bow0" type="Button" parent="BowUnlocks"]
margin_right = 130.0
margin_bottom = 60.0
rect_min_size = Vector2( 130, 60 )

[node name="Label" type="Label" parent="BowUnlocks/Bow0"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "White Bow
Buy for 800"
align = 1
valign = 1

[node name="Arrow0" type="Button" parent="BowUnlocks"]
margin_left = 142.0
margin_right = 272.0
margin_bottom = 60.0
rect_min_size = Vector2( 130, 60 )

[node name="Label" type="Label" parent="BowUnlocks/Arrow0"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Black Arrows
Equip"
align = 1
valign = 1

[node name="Bow1" type="Button" parent="BowUnlocks"]
margin_top = 72.0
margin_right = 130.0
margin_bottom = 132.0
rect_min_size = Vector2( 130, 60 )

[node name="Label" type="Label" parent="BowUnlocks/Bow1"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "White Bow
Buy for 800"
align = 1
valign = 1

[node name="Arrow1" type="Button" parent="BowUnlocks"]
margin_left = 142.0
margin_top = 72.0
margin_right = 272.0
margin_bottom = 132.0
rect_min_size = Vector2( 130, 60 )

[node name="Label" type="Label" parent="BowUnlocks/Arrow1"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "White Arrows
Buy for 800"
align = 1
valign = 1

[node name="Bow2" type="Button" parent="BowUnlocks"]
margin_top = 144.0
margin_right = 130.0
margin_bottom = 204.0
rect_min_size = Vector2( 130, 60 )

[node name="Label" type="Label" parent="BowUnlocks/Bow2"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Blue Bow
Buy for1000"
align = 1
valign = 1

[node name="Arrow2" type="Button" parent="BowUnlocks"]
margin_left = 142.0
margin_top = 144.0
margin_right = 272.0
margin_bottom = 204.0
rect_min_size = Vector2( 130, 60 )

[node name="Label" type="Label" parent="BowUnlocks/Arrow2"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Blue Arrows
Buy for1000"
align = 1
valign = 1

[node name="Bow3" type="Button" parent="BowUnlocks"]
margin_top = 216.0
margin_right = 130.0
margin_bottom = 276.0
rect_min_size = Vector2( 130, 60 )

[node name="Label" type="Label" parent="BowUnlocks/Bow3"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Yellow Bow
Buy for 2000"
align = 1
valign = 1

[node name="Arrow3" type="Button" parent="BowUnlocks"]
margin_left = 142.0
margin_top = 216.0
margin_right = 272.0
margin_bottom = 276.0
rect_min_size = Vector2( 130, 60 )

[node name="Label" type="Label" parent="BowUnlocks/Arrow3"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Yellow Arrows
Buy for 2000"
align = 1
valign = 1

[node name="Bow4" type="Button" parent="BowUnlocks"]
margin_top = 288.0
margin_right = 130.0
margin_bottom = 348.0
rect_min_size = Vector2( 130, 60 )

[node name="Label" type="Label" parent="BowUnlocks/Bow4"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "RED BOW
Buy for 4000"
align = 1
valign = 1

[node name="Arrow4" type="Button" parent="BowUnlocks"]
margin_left = 142.0
margin_top = 288.0
margin_right = 272.0
margin_bottom = 348.0
rect_min_size = Vector2( 130, 60 )

[node name="Label" type="Label" parent="BowUnlocks/Arrow4"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "RED Arrows
Buy for 4000"
align = 1
valign = 1

[node name="BannerLabel" type="Label" parent="."]
margin_top = 380.0
margin_right = 280.0
margin_bottom = 431.0
rect_min_size = Vector2( 0, 20 )
text = "
Banners and Hats"
align = 1
valign = 1

[node name="BannerTypes" type="GridContainer" parent="."]
margin_top = 435.0
margin_right = 280.0
margin_bottom = 855.0
custom_constants/vseparation = 12
custom_constants/hseparation = 12
columns = 2

[node name="Banner0" type="Button" parent="BannerTypes"]
margin_right = 130.0
margin_bottom = 60.0
rect_min_size = Vector2( 130, 60 )

[node name="Label" type="Label" parent="BannerTypes/Banner0"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Black Banner
Buy for 800"
align = 1
valign = 1

[node name="Helm0" type="Button" parent="BannerTypes"]
margin_left = 142.0
margin_right = 272.0
margin_bottom = 60.0
rect_min_size = Vector2( 130, 60 )

[node name="Label" type="Label" parent="BannerTypes/Helm0"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Black Hat
Buy for 800"
align = 1
valign = 1

[node name="Banner1" type="Button" parent="BannerTypes"]
margin_top = 72.0
margin_right = 130.0
margin_bottom = 132.0
rect_min_size = Vector2( 130, 60 )

[node name="Label" type="Label" parent="BannerTypes/Banner1"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "White Banner
Buy for 800"
align = 1
valign = 1

[node name="Helm1" type="Button" parent="BannerTypes"]
margin_left = 142.0
margin_top = 72.0
margin_right = 272.0
margin_bottom = 132.0
rect_min_size = Vector2( 130, 60 )

[node name="Label" type="Label" parent="BannerTypes/Helm1"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "White Hat
Buy for 800"
align = 1
valign = 1

[node name="Banner2" type="Button" parent="BannerTypes"]
margin_top = 144.0
margin_right = 130.0
margin_bottom = 204.0
rect_min_size = Vector2( 130, 60 )

[node name="Label" type="Label" parent="BannerTypes/Banner2"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Blue Banner
Buy for1000"
align = 1
valign = 1

[node name="Helm2" type="Button" parent="BannerTypes"]
margin_left = 142.0
margin_top = 144.0
margin_right = 272.0
margin_bottom = 204.0
rect_min_size = Vector2( 130, 60 )

[node name="Label" type="Label" parent="BannerTypes/Helm2"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Blue Hat
Buy for1000"
align = 1
valign = 1

[node name="Banner3" type="Button" parent="BannerTypes"]
margin_top = 216.0
margin_right = 130.0
margin_bottom = 276.0
rect_min_size = Vector2( 130, 60 )

[node name="Label" type="Label" parent="BannerTypes/Banner3"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Yellow Banner
Buy for 2000"
align = 1
valign = 1

[node name="Helm3" type="Button" parent="BannerTypes"]
margin_left = 142.0
margin_top = 216.0
margin_right = 272.0
margin_bottom = 276.0
rect_min_size = Vector2( 130, 60 )

[node name="Label" type="Label" parent="BannerTypes/Helm3"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Yellow Hat
Buy for 4000"
align = 1
valign = 1

[node name="Banner4" type="Button" parent="BannerTypes"]
margin_top = 288.0
margin_right = 130.0
margin_bottom = 348.0
rect_min_size = Vector2( 130, 60 )

[node name="Label" type="Label" parent="BannerTypes/Banner4"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "RED Banner
Buy for 4000"
align = 1
valign = 1

[node name="Helm4" type="Button" parent="BannerTypes"]
margin_left = 142.0
margin_top = 288.0
margin_right = 272.0
margin_bottom = 348.0
rect_min_size = Vector2( 130, 60 )

[node name="Label" type="Label" parent="BannerTypes/Helm4"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Red Cap
Buy for 4000"
align = 1
valign = 1

[node name="BannerNo" type="Button" parent="BannerTypes"]
margin_top = 360.0
margin_right = 130.0
margin_bottom = 420.0
rect_min_size = Vector2( 130, 60 )

[node name="Label" type="Label" parent="BannerTypes/BannerNo"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "No Banner"
align = 1
valign = 1

[node name="HelmNo" type="Button" parent="BannerTypes"]
margin_left = 142.0
margin_top = 360.0
margin_right = 272.0
margin_bottom = 420.0
rect_min_size = Vector2( 130, 60 )

[node name="Label" type="Label" parent="BannerTypes/HelmNo"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "No Cap"
align = 1
valign = 1

[connection signal="pressed" from="BowUnlocks/Bow0" to="." method="_on_Bow0_pressed"]
[connection signal="pressed" from="BowUnlocks/Arrow0" to="." method="_on_Arrow0_pressed"]
[connection signal="pressed" from="BowUnlocks/Bow1" to="." method="_on_Bow1_pressed"]
[connection signal="pressed" from="BowUnlocks/Arrow1" to="." method="_on_Arrow1_pressed"]
[connection signal="pressed" from="BowUnlocks/Bow2" to="." method="_on_Bow2_pressed"]
[connection signal="pressed" from="BowUnlocks/Arrow2" to="." method="_on_Arrow2_pressed"]
[connection signal="pressed" from="BowUnlocks/Bow3" to="." method="_on_Bow3_pressed"]
[connection signal="pressed" from="BowUnlocks/Arrow3" to="." method="_on_Arrow3_pressed"]
[connection signal="pressed" from="BowUnlocks/Bow4" to="." method="_on_Bow4_pressed"]
[connection signal="pressed" from="BowUnlocks/Arrow4" to="." method="_on_Arrow4_pressed"]
[connection signal="pressed" from="BannerTypes/Banner0" to="." method="_on_Banner0_pressed"]
[connection signal="pressed" from="BannerTypes/Helm0" to="." method="_on_Helm0_pressed"]
[connection signal="pressed" from="BannerTypes/Banner1" to="." method="_on_Banner1_pressed"]
[connection signal="pressed" from="BannerTypes/Helm1" to="." method="_on_Helm1_pressed"]
[connection signal="pressed" from="BannerTypes/Banner2" to="." method="_on_Banner2_pressed"]
[connection signal="pressed" from="BannerTypes/Helm2" to="." method="_on_Helm2_pressed"]
[connection signal="pressed" from="BannerTypes/Banner3" to="." method="_on_Banner3_pressed"]
[connection signal="pressed" from="BannerTypes/Helm3" to="." method="_on_Helm3_pressed"]
[connection signal="pressed" from="BannerTypes/Banner4" to="." method="_on_Banner4_pressed"]
[connection signal="pressed" from="BannerTypes/Helm4" to="." method="_on_Helm4_pressed"]
[connection signal="pressed" from="BannerTypes/BannerNo" to="." method="_on_BannerNo_pressed"]
[connection signal="pressed" from="BannerTypes/HelmNo" to="." method="_on_HelmNo_pressed"]
